--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
@@ -1,11 +1,11 @@
 AutoRoll_Button = Auto Roll
-OrganizeInitiative_Button = Organize Initiatives
-FinishTurn_Button = Finish Creatures Turn
-AddTeam_Button = Add Team
-AddCreature_Button = Add Creature
-AddEffect_Button = Add Effect
-Story_Title = Story Notes
+OrganizeInitiative_Button = Organiser l'ordre des créatures
+FinishTurn_Button = Finir le tour d'une créature
+AddTeam_Button = Ajouter une équipe
+AddCreature_Button = Ajouter une créature
+AddEffect_Button = Ajouter un effet
+Story_Title = Notes
 Tally_Title
-TupleColName_Title = Name
-TupleColSucc_Title = Successes
-TupleColFail_Title = Failures
+TupleColName_Title = Nom
+TupleColSucc_Title = Succès
+TupleColFail_Title = Echecs
