--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
@@ -1,6 +1,8 @@
-App_Title = Interactive Combat Encounter Tool
-Home_Tab = HOME
-New_Tab = NEW
-Edit_Tab = EDIT
-Combat_Tab = COMBAT
-Help_Tab = HELP
+App_title = Interactive Combat Encounter Tool
+File_menu = Fichier
+Preferences_menuitem = Préférences
+Save_menuitem = Enregistrer
+Help_menuitem = Aide
+Quit_menuitem = Quitter
+New_menu = Nouveau
+Edit_menu = Edition
