--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
@@ -1,2 +1,201 @@
-Name_entity = Name:
-XP_entity = XP:
+Name_entity = Nom :
+PlayerName_entity = Joueur :
+XP_entity = XP :
+Zero_warning = Doit être un entier plus grand que zéro.
+LVL_entity = Niveau :
+Integer_warning = Doit être un entier.
+Speed_entity = Vitesse :
+Init_entity = Initiative :
+Role_entity = Role :
+Striker_role = Attaquant
+Controller_role = Controlleur
+Defender_role = Défenseur
+Leader_role = Leader
+Artillery_role = Artilleur
+Brute_role = Brute
+Lurker_role = Observateur
+Skirmisher_role = Accrocheur
+Soldier_role = Soldat
+Size_entity = Taille :
+Tiny_size = Minuscule
+Small_size = Petit
+Medium_size = Moyen
+Large_size = Large
+Huge_size = Enorme
+Gargantuan_size = Gargantuan
+Power_entity = Source du pouvoir :
+Ability_title = Capacités
+STR_entity = FOR :
+CON_entity = CON :
+INT_entity = INT :
+DEX_entity = DEX :
+WIS_entity = SAG :
+CHA_entity = CHA :
+Defense_title = Défenses
+AC_entity = AC:
+REF_entity = REF:
+FORT_entity = FORT:
+WILL_entity = WILL:
+Skill_title = Abiletés
+ACRO_entity = Acrobaties :
+ATHL_entity = Athletisme :
+ARCA_entity = Arcana :
+BLUF_entity = Bluff :
+DIPL_entity = Diplomatie :
+DUNG_entity = Assaut Donjon :
+ENDU_entity = Endurance :
+HEAL_entity = Soin :
+HIST_entity = Histoire :
+INSI_entity = Intuition :
+INTI_entity = Intimidatation :
+NATU_entity = Nature :
+PERC_entity = Perception :
+RELI_entity = Religion :
+STEA_entity = Invisibilité :
+STRE_entity = Dégourdi :
+THIE_entity = Vol :
+MAXHP_entity = Santé Max :
+Bloodied_entity = Sanglant :
+SurgeValue_entity = Nombre de soins :
+SurgeNum_entity = Soins/jour :
+RaceF_entity = Caractéristiques de la race :
+Lang_entity = Langages :
+Misc_entity = Divers :
+ResistValue_entity = Valeur de la résistance :
+ResistType_entity = Type de résistance :
+Acid_resist = Acide
+Cold_resist = Froid
+Fire_resist = Feu
+Force_resist = Force
+Lightning_resist = Eclair
+Necrotic_resist = Nécrotique
+Poison_resist = Poison
+Psychic_resist = Psychique
+Radiant_resist = Radieux
+Thunder_resist = Foudre
+Add_button = +
+Remove_button = -
+Name_attack = Nom de l'attaque :
+Primary_attack = Cible principal :
+Secondary_attack = Cible secondaire :
+Accessories_attack = Accessoires :
+Effect_attack = Effet de l'attaque :
+Charm_attack = Charme
+Conjuration_attack = Conjuration
+Fear_attack = Peur
+Healing_attack = Guérison
+Illusion_attack = Illusion
+Poison_attack = Poison
+Polymorph_attack = Polymorphe
+Reliable_attack = Fiable
+Sleep_attack = Sommeil
+Stance_attack = Position
+Teleportation_attack = Téléportation
+Zone_attack = Zone
+None_attack = Aucune
+Damage_attack = Dommage de l'attaque :
+Ability_attack = Capacité :
+STR_attack = Force
+CON_attack = Constitution
+DEX_attack = Dextérité
+INT_attack = Intelligence
+WIS_attack = Sagesse
+CHA_attack = Charisme
+Defense_attack = Défense:
+AC_attack = Classe Armure
+REF_attack = Réflexe
+FORT_attack = Force
+WILL_attack = Volonté
+Hit_attack = Touché (dommage dû aux dés) :
+Miss_attack = Manqué :
+Action_attack = Action :
+Sustain_attack = Soutient :
+Standard_attack = Standard :
+Move_attack = Mouvement
+Minor_attack = Mineur
+Free_attack = Libre
+Basic_attack = Attaque basique :
+Use_attack = Utilisation :
+AtWill_attack = A volonté
+Encounter_attack = Affrontement
+Daily_attack = Quotidienne
+Recharge_attack = Recharge
+Trigger_attack = Déclenchement :
+Short_range = Courte portée :
+Long_range = Longue portée :
+Reach_melee = Portée :
+Range_area = Portée :
+Size_area = Taille :
+Type_area = Type :
+Burst_area = Eclat
+Wall_area = Mur
+Size_close = Valeur :
+Type_close = Type :
+Blast_close = Souffle
+Burst_close = Eclat
+Area_attack = Zone
+Close_attack = Proche
+Melee_attack = Mélée
+Personal_attack = Personnelle 
+Ranged_attack = A portée
+Next_button = Suivant
+Back_button = Précédent
+Blaster_trap = Explosion
+Lurker_trap = Observateur
+Obstacle_trap = Obstacle
+Warder_trap = Guardien
+Solo_trap = Solo
+Elite_trap = Elite
+Trap_trap = Piège
+Hazard_trap = Danger
+ACRO_trap = Acrobaties
+ATHL_trap = Athletisme
+ARCA_trap = Arcana
+BLUF_trap = Bluff
+DIPL_trap = Diplomatie
+DUNG_trap = Dungeoneering
+ENDU_trap = Endurance
+HEAL_trap = Soin
+HIST_trap = Histoire
+INSI_trap = Intuition
+INTI_trap = Intimidation
+NATU_trap = Nature
+PERC_trap = Perception
+RELI_trap = Religion
+STEA_trap = Invisibilité
+STRE_trap = Dégourdi
+THIE_trap = Vol
+Name_trap = Nom du piège :
+Level_trap = Niveau :
+Role_trap = Role :
+Type_trap = Type :
+AvoidSkill_trap = Habileté à éviter :
+AvoidValue_trap = Valeur :
+CounterSkill_trap = Contremesure :
+CounterDifficulty_trap = Difficulté de la contremesure :
+CounterText_trap = Info sur la contremesure :
+Trigger_trap = Déclencheurs de piège :
+MonsterOrigin_label = Origine du Monstre
+Aberrant_origin = Aberrant
+Elemental_origin = Element
+Fey_origin = Extra-lucide
+Immortal_origin = Immortel
+Shadow_origin = Ombre
+MonsterType_label = Type du Monstre
+Animate_monster = Animal
+Beast_monster = Bête
+Humanoid_monster = Humanoïde
+MagicalBeast_monster = Bête magique
+Duration_effect = Durée de l'effet :
+StartOfAppliersTurn_effect = Activation de l'effet
+EndOfAppliersTurn_effect = Fin de l'effet
+EndOfEncounter_effect = Fin de l'affrontement
+SaveEnds_effect = Save Ends
+Name_effect = Nom de l'effet :
+Metrics_effect = Metriques :
+Damage_effect = Dommage associé :
+tempHP_creature = Vie temporaire :
+Initiative_creature = Initiative :
+HP_creature = Vie actuelle :
+Surge_creature = Soins restant :
+SecondWind_creature = Second Wind utilisé :
