--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/EntityTypeName_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/EntityTypeName_fr_CA.properties
@@ -1,5 +1,6 @@
-CharacterSheet_entity = Character
-Monster_entity = Monster
-Team_entity = Team
-Effect_entity = Effect
-TrapHazard_entity = Trap/Hazard
+CharacterSheet_entity = Personnage
+Monster_entity = Monstre
+Team_entity = Equipe
+Effect_entity = Effet
+TrapHazard_entity = Piège/Danger
+CombatEncounter_entity = Affrontement
