--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/ExceptionWindow_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/ExceptionWindow_fr_CA.properties
@@ -1,4 +1,4 @@
-Continue_Button = Continue
-Log_Button = Log Exception
-Trace_Button = Show Stack Trace
-ExceptionWindow_Title = An Error Has Occurred
+Continue_Button = Continuer
+Log_Button = Exception
+Trace_Button = Montrer l'erreur
+ExceptionWindow_Title = Une erreur s'est produite
