--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/NewEditTab_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/NewEditTab_fr_CA.properties
@@ -1,3 +1,3 @@
-Save_Button = Save
-Cancel_Button = Cancel
-Remove_Button = Remove
+Save_Button = Sauvegarder
+Cancel_Button = Annuler
+Remove_Button = Supprimer
