--- a/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
@@ -61,8 +61,8 @@ SurgeNum_entity = Soins/jour :
 RaceF_entity = Caractéristiques de la race :
 Lang_entity = Langages :
 Misc_entity = Divers :
-ResistValue_entity = Valeur de la résistance :
-ResistType_entity = Type de résistance :
+ResistValue_entity = Valeur :
+ResistType_entity = Type :
 Acid_resist = Acide
 Cold_resist = Froid
 Fire_resist = Feu
@@ -75,11 +75,11 @@ Radiant_resist = Radieux
 Thunder_resist = Foudre
 Add_button = +
 Remove_button = -
-Name_attack = Nom de l'attaque :
+Name_attack = Nom :
 Primary_attack = Cible principal :
 Secondary_attack = Cible secondaire :
 Accessories_attack = Accessoires :
-Effect_attack = Effet de l'attaque :
+Effect_attack = Effet :
 Charm_attack = Charme
 Conjuration_attack = Conjuration
 Fear_attack = Peur
@@ -93,7 +93,7 @@ Stance_attack = Position
 Teleportation_attack = Téléportation
 Zone_attack = Zone
 None_attack = Aucune
-Damage_attack = Dommage de l'attaque :
+Damage_attack = Dommage :
 Ability_attack = Capacité :
 STR_attack = Force
 CON_attack = Constitution
