--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
@@ -199,3 +199,4 @@ Initiative_creature = Initiative :
 HP_creature = Vie actuelle :
 Surge_creature = Soins restant :
 SecondWind_creature = Second Wind utilisé :
+Attack_attack = Attaque:
