DAO modifications + CombatEncounter edit() revisions

--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/PrefsWindow_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/PrefsWindow_fr_CA.properties
@@ -1,5 +1,5 @@
-Prefs_title = Preferences
-Save_button = Save
-Cancel_button = Cancel
-langauge_label = Languages
-dbPath_label = Database Path:
+Prefs_title = Préférences
+Save_button = Enregistrer
+Cancel_button = Annuler
+langauge_label = Langues
+dbPath_label = Chemin de la Base de données :
