1 bug fix and added properties to the french files

--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
@@ -200,3 +200,10 @@ HP_creature = Vie actuelle :
 Surge_creature = Soins restant :
 SecondWind_creature = Second Wind utilisé :
 Attack_attack = Attaque:
+Next_team = Next
+Prev_team = Previous
+Options_title = Options
+NPCOnly_label = NPC only:
+CreatureDisplay_label = Display Creatures
+TrapDisplay_label = Display Traps
+CurrentHP_entity = HP:
