--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
@@ -9,3 +9,5 @@ Tally_Title
 TupleColName_Title = Nom
 TupleColSucc_Title = Succès
 TupleColFail_Title = Echecs
+Cancel_button = Cancel
+AddTuple_Button = +
