--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
@@ -6,5 +6,5 @@ Help_menuitem = Aide
 Quit_menuitem = Quitter
 New_menu = Nouveau
 Edit_menu = Edition
-SaveCE_message = Give the Combat Encounter a name:
-SaveCE_title = Save Combat Encounter
+SaveCE_message = Donner un nom à l'Affrontement en cours :
+SaveCE_title = Enregistrer Affrontement
