Implemented GRE requirement. Bug Fixes

--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
@@ -12,3 +12,4 @@ TupleColFail_Title = Echecs
 Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
+GRE_Button = Generate Random Encounter
