--- a/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
+++ b/trunk/ICE-T/src/main/resources/filters/mainGUI_l10n/RootWindow_fr_CA.properties
@@ -7,4 +7,4 @@ Quit_menuitem = Quitter
 New_menu = Nouveau
 Edit_menu = Edition
 SaveCE_message = Donner un nom à l'Affrontement en cours :
-SaveCE_title = Enregistrer Affrontement
+SaveCE_title = Enregistrer l'affrontement
