french properties files up to date

--- a/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/beanGUI_l10n/Entity_fr_CA.properties
@@ -200,10 +200,11 @@ HP_creature = Vie actuelle :
 Surge_creature = Soins restant :
 SecondWind_creature = Second Wind utilisé :
 Attack_attack = Attaque:
-Next_team = Next
-Prev_team = Previous
+Next_team = Suivant
+Prev_team = Précédent
 Options_title = Options
-NPCOnly_label = NPC only:
-CreatureDisplay_label = Display Creatures
-TrapDisplay_label = Display Traps
+NPCOnly_label = NPC seulement:
+CreatureDisplay_label = Montrer les créatures
+TrapDisplay_label = Montrer les pièges
 CurrentHP_entity = HP:
+Avoidance_trap = Evitement
