--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
@@ -1,4 +1,4 @@
-AutoRoll_Button = Auto Roll
+AutoRoll_Button = Lancé de dés
 OrganizeInitiative_Button = Organiser l'ordre des créatures
 FinishTurn_Button = Finir le tour d'une créature
 AddTeam_Button = Ajouter une équipe
@@ -12,4 +12,7 @@ TupleColFail_Title = Echecs
 Cancel_button = Cancel
 AddTuple_Button = +
 RemoveTuple_Button = -
-GRE_Button = Generate Random Encounter
+Effect_Warning = Vous devez sélectionner au moins une créature
+GRE_Button = Générer une équipe de monstres aléatoire
+ReRoll_Button = Nouveau lancé
+Options_Title = Options
