--- a/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
+++ b/ICE-T/src/main/resources/filters/mainGUI_l10n/CombatTab_fr_CA.properties
@@ -16,3 +16,4 @@ Effect_Warning = Vous devez sélectionner au moins une créature
 GRE_Button = Générer une équipe de monstres aléatoire
 ReRoll_Button = Nouveau lancé
 Options_Title = Options
+GRE_Warning = Il doit y avoir au moins un joueur dans l'affrontement.
